[tool.poetry]
name = "relevc"
version = "0.1.0"
description = ""
authors = ["narcisse_madogni <n.madogni@gmail.com>"]
readme = "README.md"
packages = [{include = "relevc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
